--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,5 +1,5 @@
 # Theme Skin
-skin: default # default, night, plum, sea, soft, steel
+skin: night # default, night, plum, sea, soft, steel
 
 # Theme Text
 t:
@@ -29,10 +29,9 @@ google_fonts:
   - name: "Fira Sans"
     weights: "400,400i,600,600i"
 
-# Link to specific internal pages in the navigation.
-# Create a custom list to override the default setting of including links to all
-# pages that have a `title`. Add raw page paths in the order you'd like.
-
 navigation_pages:
   - about.md
-  - cv.md
+  - 网站设计.md
+  - 平面设计.md
+  - SVG制作.md
+  - 学习笔记.md
